piccoli test di analisi

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -145,7 +145,7 @@
    "id": "641257e7",
    "metadata": {},
    "source": [
-    "### Calcolo Percorsi completo"
+    "### Analisi Completo"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "id": "f1a325df",
    "metadata": {},
    "source": [
-    "### Calcolo con filtri e limite POI"
+    "### Analisi con filtri"
    ]
   },
   {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "id": "d4ef509f",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
        "9686"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "id": "8e472ed0",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
     "with open(PATH_EXTENDED_CICLABILI_PICKLE_STAGING, \"rb\") as file:\n",
     "    G_extended_ciclabili = pickle.load(file)\n",
     "\n",
-    "n_pois = len(gdf_point_ciclabili) / 30 * 100    # 30% del totale\n",
+    "n_pois = len(gdf_point_ciclabili) / 100 * 30    # 30% del totale\n",
     "Graph_functions.auto_filter_poi(G_percorsi = G_extended_ciclabili,\n",
     "                                max_pois= n_pois,\n",
     "                                peso_inquinamento_vs_incidenti = 0,\n",
@@ -242,20 +242,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "514acb85",
+   "id": "b64467f3",
    "metadata": {},
    "source": [
-    "#### Di quello completo"
+    "Per praticità per ora basta commentare quello di cui non si vuole guardare le statistiche"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 74,
    "id": "b029f61f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_extended_ciclabili = gpd.read_file(PATH_EXTENDED_CICLABILI_CLEAN)"
+    "gdf_extended_ciclabili = gpd.read_file(PATH_EXTENDED_CICLABILI_CLEAN)\n",
+    "#gdf_extended_ciclabili = gpd.read_file(PATH_EXTENDED_CICLABILI_FILTRATO_CLEAN)"
    ]
   },
   {
@@ -268,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 75,
    "id": "19eebf89",
    "metadata": {},
    "outputs": [
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 76,
    "id": "bc44845d",
    "metadata": {},
    "outputs": [
@@ -316,21 +317,13 @@
        "94.60126123978074"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "float(gdf_extended_ciclabili[gdf_extended_ciclabili[\"ciclabile\"] == \"False\"][\"length\"].sum()/1000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "463bef32",
-   "metadata": {},
-   "source": [
-    "#### Di quello filtrato"
    ]
   },
   {
@@ -697,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 77,
    "id": "c3735fbc",
    "metadata": {},
    "outputs": [
@@ -716,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "id": "a7bb04ae",
    "metadata": {},
    "outputs": [],
@@ -750,14 +743,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "f4d8f98d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                              length\n",
+      "highway                             \n",
+      "footway                   109.403574\n",
+      "cycleway                   85.216865\n",
+      "residential                33.887987\n",
+      "tertiary                   23.981052\n",
+      "secondary                  12.057483\n",
+      "primary                     6.631249\n",
+      "track                       3.158726\n",
+      "pedestrian                  2.210088\n",
+      "service                     1.978385\n",
+      "path                        1.692647\n",
+      "footway steps               0.476395\n",
+      "unclassified                0.306090\n",
+      "residential footway         0.233284\n",
+      "secondary_link              0.224865\n",
+      "track service path          0.217083\n",
+      "footway service             0.207583\n",
+      "tertiary_link               0.175564\n",
+      "residential cycleway        0.169111\n",
+      "footway pedestrian          0.158530\n",
+      "residential pedestrian      0.146128\n",
+      "cycleway path               0.133034\n",
+      "cycleway footway            0.112219\n",
+      "cycleway service            0.093463\n",
+      "primary_link                0.085114\n",
+      "living_street               0.078441\n",
+      "residential steps           0.077507\n",
+      "footway platform            0.063971\n",
+      "residential path            0.047683\n",
+      "steps path                  0.036220\n",
+      "steps                       0.031511\n",
+      "unclassified residential    0.026767\n",
+      "residential service         0.001872\n",
+      "Tot: 283.32048936837066\n"
+     ]
+    }
+   ],
    "source": [
     "# Stampiamo il risultato\n",
     "print(gdf_analisi_istruzione_mod_most_highways)\n",
     "print(f\"Tot: {gdf_analisi_istruzione_mod_most_highways[\"length\"].sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "9864fb59",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'ciclabile'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Matteo\\Coding\\Project\\Progetto-Bike\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mKeyError\u001b[39m: 'ciclabile'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[81]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mfloat\u001b[39m(gdf_analisi_istruzione_mod_most_highways[\u001b[43mgdf_analisi_istruzione_mod_most_highways\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mciclabile\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m == \u001b[33m\"\u001b[39m\u001b[33mFalse\u001b[39m\u001b[33m\"\u001b[39m][\u001b[33m\"\u001b[39m\u001b[33mlength\u001b[39m\u001b[33m\"\u001b[39m].sum()/\u001b[32m1000\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Matteo\\Coding\\Project\\Progetto-Bike\\.venv\\Lib\\site-packages\\pandas\\core\\frame.py:4107\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4105\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4107\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4108\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4109\u001b[39m     indexer = [indexer]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Matteo\\Coding\\Project\\Progetto-Bike\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
+      "\u001b[31mKeyError\u001b[39m: 'ciclabile'"
+     ]
+    }
+   ],
+   "source": [
+    "float(gdf_analisi_istruzione_mod_most_highways[gdf_analisi_istruzione_mod_most_highways[\"ciclabile\"] == \"False\"][\"length\"].sum()/1000)"
    ]
   },
   {
@@ -969,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "c6b788aa",
    "metadata": {},
    "outputs": [],
