update colonna municipi su parchi e aree gioco per join su tableau

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -413,33 +413,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "9d1ce163",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_analisi_sport = gpd.read_file(PATH_SPORT_TEMPO_LIBERO_FILTRATO_CLEAN)"
+    "gdf_analisi_sport = gpd.read_file(PATH_SPORT_TEMPO_LIBERO_CLEAN)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "87e261e2",
+   "execution_count": 109,
+   "id": "185bad39",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "400"
+       "np.float64(104.9339840532247)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(gdf_analisi_sport[gdf_analisi_sport[\"artificial\"] == True])"
+    "gdf_analisi_sport_mod = gdf_analisi_sport[gdf_analisi_sport[\"artificial\"] != True]\n",
+    "gdf_analisi_sport_mod[gdf_analisi_sport_mod[\"ciclabile\"]==\"True\"][\"length\"].sum()/1000"
    ]
   },
   {
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 108,
    "id": "88d01772",
    "metadata": {},
    "outputs": [],
@@ -480,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 102,
    "id": "04596a5f",
    "metadata": {},
    "outputs": [
@@ -490,36 +491,43 @@
      "text": [
       "                                 length\n",
       "highway                                \n",
-      "cycleway                     100.661339\n",
-      "footway                       66.219267\n",
-      "residential                   14.011855\n",
-      "tertiary                      11.996346\n",
-      "secondary                      7.781333\n",
-      "track                          3.195524\n",
-      "pedestrian                     2.116348\n",
-      "primary                        2.018947\n",
-      "service                        1.769118\n",
-      "path                           1.010400\n",
-      "cycleway footway               0.453654\n",
-      "footway service                0.451056\n",
-      "footway pedestrian             0.359980\n",
-      "footway steps                  0.330102\n",
+      "footway                      179.947934\n",
+      "cycleway                     102.764815\n",
+      "residential                   38.399767\n",
+      "tertiary                      24.759123\n",
+      "secondary                     10.237838\n",
+      "primary                        7.072719\n",
+      "service                        5.422086\n",
+      "pedestrian                     4.235049\n",
+      "path                           3.516888\n",
+      "track                          2.303546\n",
+      "footway service                1.271002\n",
+      "unclassified                   1.251304\n",
+      "footway steps                  0.741803\n",
+      "footway path                   0.569967\n",
+      "residential footway            0.474065\n",
+      "footway pedestrian             0.466265\n",
+      "proposed footway service       0.321046\n",
       "cycleway path                  0.291043\n",
-      "residential secondary          0.277534\n",
-      "residential pedestrian         0.243722\n",
-      "footway path                   0.177522\n",
-      "pedestrian path                0.118616\n",
-      "tertiary_link                  0.117791\n",
-      "residential footway            0.111161\n",
-      "unclassified                   0.107320\n",
-      "residential service            0.094434\n",
+      "residential pedestrian         0.275658\n",
+      "cycleway footway               0.272785\n",
+      "track service                  0.234884\n",
+      "tertiary_link                  0.217631\n",
+      "residential cycleway           0.214467\n",
+      "secondary_link                 0.171147\n",
+      "residential path               0.163377\n",
+      "service path                   0.149921\n",
+      "residential service            0.137655\n",
+      "construction                   0.132553\n",
+      "unclassified residential       0.116679\n",
       "cycleway service               0.093463\n",
+      "unclassified primary_link      0.087652\n",
       "residential footway service    0.077618\n",
-      "residential cycleway           0.052162\n",
-      "primary_link                   0.046211\n",
-      "unclassified tertiary          0.014137\n",
-      "steps                          0.003917\n",
-      "Tot: 214.20192384734432\n"
+      "primary_link                   0.073602\n",
+      "path pedestrian                0.044139\n",
+      "tertiary tertiary_link         0.037849\n",
+      "steps                          0.015532\n",
+      "Tot: 386.5628717927376\n"
      ]
     }
    ],
@@ -543,7 +551,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 95,
+   "id": "0acbc478",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "450.50374066181047"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float(gdf_analisi_sport[\"length\"].sum()/1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "id": "f7ae7804",
    "metadata": {},
    "outputs": [
@@ -553,7 +582,7 @@
        "112.65026341818994"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,10 +601,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "b0446036",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   MUNICIPIO  poi     length  Incidenti  tot  % poi\n",
+      "2          3   56  28.429212       1014   74  14.00\n",
+      "7          8   55  30.266064        996  155  13.75\n",
+      "8          9   52  28.539204        947  185  13.00\n",
+      "0          1   48  23.733266        859   49  12.00\n",
+      "6          7   46  29.452303        806  127  11.50\n",
+      "5          6   39  20.985732        698  127   9.75\n",
+      "3          4   38  25.111688        691  112   9.50\n",
+      "4          5   35  27.389635        638  104   8.75\n",
+      "1          2   31  21.270263        567   84   7.75\n"
+     ]
+    }
+   ],
    "source": [
     "gdf_analisi_sport_raggruppato = gdf_analisi_sport.groupby([\"MUNICIPIO\"]).agg({\n",
     "    \"poi\": \"sum\",\n",
@@ -1255,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 82,
    "id": "9205ef0d",
    "metadata": {},
    "outputs": [],
