--- a/Scripts/Inquinamento.ipynb
+++ b/Scripts/Inquinamento.ipynb
@@ -241,10 +241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dad88be7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\aless\\AppData\\Local\\Temp\\ipykernel_15988\\457915475.py:6: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '6' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  gdf_inquinamento_municipi.loc[gdf_inquinamento_municipi[\"MUNICIPIO\"].isna(), \"MUNICIPIO\"] = \"6\"\n"
+     ]
+    }
+   ],
    "source": [
     "colonne_da_tenere = [\"pm25\", \"geometry\"]\n",
     "gdf_inquinamento_municipi = gdf[colonne_da_tenere].copy()\n",
