--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "e4ded582",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,8 @@
     "import geopandas as gpd\n",
     "import osmnx as ox\n",
     "\n",
-    "from my_paths import *"
+    "from my_paths import *\n",
+    "import Graph_functions"
    ]
   },
   {
@@ -82,12 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "36044d24",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf = gpd.read_file(PATH_MUNICIPI_RAW).to_crs(CRS_GRAD)\n",
+    "gdf.rename(columns={\"municipio\": \"MUNICIPIO\"},inplace=True)\n",
+    "gdf[\"MUNICIPIO\"] = gdf[\"MUNICIPIO\"].astype(int)\n",
     "gdf.to_file(PATH_MUNICIPI_CLEAN)"
    ]
   },
@@ -101,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "9fd56124",
    "metadata": {},
    "outputs": [],
@@ -111,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "9383f129",
    "metadata": {},
    "outputs": [],
@@ -134,7 +137,7 @@
     "        'geometry': flatten_to_multipolygon\n",
     "        })\n",
     ").reset_index()\n",
-    "\n",
+    "gdf_parchi_uniti.rename(columns={\"ZONA\": \"MUNICIPIO\"}, inplace=True)\n",
     "gdf_parchi_uniti = gdf_parchi_uniti.set_crs(CRS_GRAD).to_crs(CRS_METR)\n",
     "gdf_parchi_uniti['PERIM_M'] = gdf_parchi_uniti.geometry.apply(lambda geom: unary_union(geom).boundary.length)\n",
     "gdf_parchi_uniti['AREA_MQ'] = gdf_parchi_uniti.geometry.area\n",
@@ -143,8 +146,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "352925f9",
+   "metadata": {},
+   "source": [
+    "Aggiungiamo colonna Municipio"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "f7d3450c",
    "metadata": {},
    "outputs": [],
@@ -554,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "b4a1e8ec",
    "metadata": {},
    "outputs": [],
@@ -574,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "fbd84e01",
    "metadata": {},
    "outputs": [],
@@ -594,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "1177187b",
    "metadata": {},
    "outputs": [],
@@ -615,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "42e09b7e",
    "metadata": {},
    "outputs": [],
@@ -628,8 +639,10 @@
     "            new_geos.append(poligon)\n",
     "    return MultiPolygon(new_geos)\n",
     "\n",
+    "gdf.rename(columns={\"municipio\": \"MUNICIPIO\"}, inplace=True)\n",
+    "gdf[\"MUNICIPIO\"] = gdf[\"MUNICIPIO\"].astype(int)\n",
     "gdf = gdf.groupby(\"località\").agg({\n",
-    "    \"municipio\": \"first\",\n",
+    "    \"MUNICIPIO\": \"first\",\n",
     "    \"area\": \"first\",\n",
     "    \"data_ini\": \"max\",\n",
     "    \"area_mq\": \"sum\",\n",
@@ -640,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "20d81422",
    "metadata": {},
    "outputs": [
@@ -648,7 +661,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
+      "c:\\Matteo\\Coding\\Project\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
       "  write(\n"
      ]
     }
