--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e4ded582",
    "metadata": {},
    "outputs": [],
@@ -28,6 +28,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7de29985",
+   "metadata": {},
+   "source": [
+    "## Municipi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bde508e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf = gpd.read_file(PATH_MUNICIPI_RAW).to_crs(CRS_GRAD)\n",
+    "gdf.rename(columns={\"municipio\": \"MUNICIPIO\"},inplace=True)\n",
+    "gdf[\"MUNICIPIO\"] = gdf[\"MUNICIPIO\"].astype(int)\n",
+    "gdf.to_file(PATH_MUNICIPI_CLEAN)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a02fd825",
    "metadata": {},
    "source": [
@@ -36,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "4e3b2165",
    "metadata": {},
    "outputs": [
@@ -64,34 +85,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "47eaa31a",
+   "metadata": {},
+   "source": [
+    "Aggiungiamo colonna MUNICIPI tramite sjoin \"intersect\" per la join con le strade durante le analisi"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "id": "db08b838",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "municipi = gpd.read_file(PATH_MUNICIPI_CLEAN)\n",
+    "gdf = gpd.sjoin(\n",
+    "    gdf,\n",
+    "    municipi,\n",
+    "    how=\"left\",\n",
+    "    predicate=\"intersects\"\n",
+    "    ).drop([\"index_right\"], axis=1) # eliminiamo l'index_right (conserva l'indice del dataframe del gdf di destra ma non ci serve)\n",
+    "gdf[\"MUNICIPIO\"] = gdf[\"MUNICIPIO\"].astype(int)\n",
+    "gdf.drop([\"AREA\",\"PERIMETRO\"], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "id": "58c26b6c",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf.to_file(PATH_BIKEMI_CLEAN, driver=\"GeoJSON\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b80e93a3",
-   "metadata": {},
-   "source": [
-    "# Municipi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "36044d24",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf = gpd.read_file(PATH_MUNICIPI_RAW).to_crs(CRS_GRAD)\n",
-    "gdf.rename(columns={\"municipio\": \"MUNICIPIO\"},inplace=True)\n",
-    "gdf[\"MUNICIPIO\"] = gdf[\"MUNICIPIO\"].astype(int)\n",
-    "gdf.to_file(PATH_MUNICIPI_CLEAN)"
    ]
   },
   {
@@ -104,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "9fd56124",
    "metadata": {},
    "outputs": [],
@@ -114,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "9383f129",
    "metadata": {},
    "outputs": [],
@@ -138,6 +164,7 @@
     "        })\n",
     ").reset_index()\n",
     "gdf_parchi_uniti.rename(columns={\"ZONA\": \"MUNICIPIO\"}, inplace=True)\n",
+    "gdf_parchi_uniti[\"MUNICIPIO\"] = gdf_parchi_uniti[\"MUNICIPIO\"].astype(int)\n",
     "gdf_parchi_uniti = gdf_parchi_uniti.set_crs(CRS_GRAD).to_crs(CRS_METR)\n",
     "gdf_parchi_uniti['PERIM_M'] = gdf_parchi_uniti.geometry.apply(lambda geom: unary_union(geom).boundary.length)\n",
     "gdf_parchi_uniti['AREA_MQ'] = gdf_parchi_uniti.geometry.area\n",
@@ -146,16 +173,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "352925f9",
-   "metadata": {},
-   "source": [
-    "Aggiungiamo colonna Municipio"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "f7d3450c",
    "metadata": {},
    "outputs": [],
@@ -181,25 +200,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "033ad7d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = gpd.read_file(PATH_FONTANE_RAW, sep=\";\")\n",
-    "gdf[\"Location\"] = gdf.apply(lambda row: Point(float(row[\"LONG_X_4326\"]), float(row[\"LAT_Y_4326\"])), axis=1)\n",
+    "df = gpd.pd.read_csv(PATH_FONTANE_RAW, sep=\";\")\n",
+    "df[\"Location\"] = df.apply(lambda row: Point(float(row[\"LONG_X_4326\"]), float(row[\"LAT_Y_4326\"])), axis=1)\n",
     "columns = {\n",
     "    'objectID':'id_fontane',\n",
-    "    'MUNICIPIO':'municipio',\n",
+    "    'MUNICIPIO':'MUNICIPIO',\n",
     "    'NIL': \"nome\",\n",
     "    'LONG_X_4326':'longitudine',\n",
     "    'LAT_Y_4326': 'latitudine',\n",
     "    'Location':'geometry'\n",
     "}\n",
-    "gdf = gdf[columns.keys()]\n",
-    "gdf = gdf.rename(columns=columns)\n",
-    "gdf['icon'] = \"events\"\n",
-    "gdf = gpd.GeoDataFrame(gdf, geometry=\"geometry\", crs=CRS_GRAD)\n",
+    "df = df[columns.keys()]\n",
+    "df = df.rename(columns=columns)\n",
+    "df[\"MUNICIPIO\"] = df[\"MUNICIPIO\"].astype(int)\n",
+    "df['icon'] = \"events\"\n",
+    "gdf = gpd.GeoDataFrame(df, geometry=\"geometry\", crs=CRS_GRAD)\n",
     "gdf.to_file(PATH_FONTANE_CLEAN, driver=\"GeoJSON\")"
    ]
   },
@@ -223,15 +243,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "6d4c4779",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf = gpd.read_file(PATH_IMPIANTI_SPORTIVI_RAW)\n",
     "gdf = gdf[[\"municipio\", \"località\", \"obj_id\", \"data_ini\", \"area_mq\", \"perim_m\", \"descrizione_codice\", \"geometry\"]]\n",
-    "gdf = gdf.rename(columns={\"data_ini\": \"anno_inizio\", \"obj_id\": \"id_impianto\"})\n",
-    "\n",
+    "gdf = gdf.rename(columns={\"data_ini\": \"anno_inizio\", \"obj_id\": \"id_impianto\", \"municipio\": \"MUNICIPIO\"})\n",
+    "gdf[\"MUNICIPIO\"] = gdf[\"MUNICIPIO\"].astype(int)\n",
     "gdf = gdf[gdf[\"anno_inizio\"].notna()].reset_index()\n",
     "gdf[\"anno_inizio\"] = gdf[\"anno_inizio\"].apply(lambda x: x.year)\n",
     "\n",
@@ -241,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "a0917ac6",
    "metadata": {},
    "outputs": [],
@@ -261,7 +281,7 @@
     "    return MultiPolygon(new_geos)\n",
     "\n",
     "gdf = gdf.groupby(\"località\").agg({\n",
-    "    \"municipio\": \"first\",\n",
+    "    \"MUNICIPIO\": \"first\",\n",
     "    \"anno_inizio\": \"max\",\n",
     "    \"area_mq\": \"sum\",\n",
     "    \"descrizione_codice\": group_descrizione,\n",
@@ -280,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "9f53a865",
    "metadata": {},
    "outputs": [
@@ -288,7 +308,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
+      "c:\\Matteo\\Coding\\Project\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
       "  write(\n"
      ]
     }
@@ -307,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "e36db582",
    "metadata": {},
    "outputs": [
@@ -330,6 +350,7 @@
     "    \"geometry\": \"geometry\"\n",
     "}\n",
     "gdf = gdf[column.keys()]\n",
+    "gdf[\"MUNICIPIO\"] = gdf[\"MUNICIPIO\"].astype(int)\n",
     "gdf[\"icon\"] = \"place\"\n",
     "gdf = gdf.rename(columns=column)\n",
     "\n",
@@ -354,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "f3e1f1e9",
    "metadata": {},
    "outputs": [],
@@ -377,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "3366618a",
    "metadata": {},
    "outputs": [],
@@ -386,7 +407,7 @@
     "    \"DENOMINAZIONE\": \"Denominazione\",\n",
     "    \"GRADO\": \"Grado\",\n",
     "    \"INDIRIZZO\": \"Indirizzo\",\n",
-    "    \"MUNICIPIO\": \"Municipio\",\n",
+    "    \"MUNICIPIO\": \"MUNICIPIO\",\n",
     "    \"NIL\": \"Quartiere\",\n",
     "    \"LONG_X_4326\": \"Longitudine\",\n",
     "    \"LAT_Y_4326\": \"Latitudine\",\n",
@@ -413,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "ebd4ea05",
    "metadata": {},
    "outputs": [],
@@ -422,7 +443,7 @@
     "    \"DENOMINAZ\": \"Denominazione\",\n",
     "    \"TIPOLOGIA\": \"Grado\",\n",
     "    \"INDIRIZZO\": \"Indirizzo\",\n",
-    "    \"MUNICIPIO\": \"Municipio\",\n",
+    "    \"MUNICIPIO\": \"MUNICIPIO\",\n",
     "    \"NIL\": \"NIL\",\n",
     "    \"LONG_X_4326\": \"Longitudine\",\n",
     "    \"LAT_Y_4326\": \"Latitudine\",\n",
@@ -447,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "a49cecfc",
    "metadata": {},
    "outputs": [],
@@ -466,12 +487,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "6d213329",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_gdf[\"icon\"] = \"id-card\""
+    "final_gdf[\"icon\"] = \"id-card\"\n",
+    "final_gdf[\"MUNICIPIO\"] = final_gdf[\"MUNICIPIO\"].astype(int)"
    ]
   },
   {
@@ -484,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "8004b41a",
    "metadata": {},
    "outputs": [],
@@ -510,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "75d186dd",
    "metadata": {},
    "outputs": [],
@@ -518,13 +540,14 @@
     "gdf = gpd.read_file(PATH_FARMACIE_RAW)\n",
     "column = {\n",
     "    \"DESCRIZIONE_FARMACIA\": \"Descrizione_farmacia\",\n",
-    "    \"MUNICIPIO\": \"Municipio\",\n",
+    "    \"MUNICIPIO\": \"MUNICIPIO\",\n",
     "    \"NIL\": \"NIL\",\n",
     "    \"LONGITUDINE\": \"Longitudine\",\n",
     "    \"LATITUDINE\": \"Latitudine\",\n",
     "    \"geometry\": \"geometry\"\n",
     "}\n",
     "gdf = gdf[column.keys()]\n",
+    "gdf[\"MUNICIPIO\"] = gdf[\"MUNICIPIO\"].astype(int)\n",
     "gdf[\"icon\"] = \"control-on\"\n",
     "gdf = gdf.rename(columns=column)"
    ]
@@ -539,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "c723552f",
    "metadata": {},
    "outputs": [],
@@ -692,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "id": "8ba46c12",
    "metadata": {},
    "outputs": [
@@ -700,7 +723,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
+      "c:\\Matteo\\Coding\\Project\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
       "  write(\n"
      ]
     }
@@ -714,13 +737,14 @@
     "    \"denominaz\": \"nome_teatro\",\n",
     "    \"sottotipo\": \"tipologia\",\n",
     "    \"id\": \"id_teatro\",\n",
-    "    \"zona\": \"municipio\",\n",
+    "    \"zona\": \"MUNICIPIO\",\n",
     "    \"glongitude\": \"longitudine\",\n",
     "    \"glatitude\": \"latitudine\",\n",
     "    \"geometry\": \"geometry\"\n",
     "}\n",
     "df = df[columns.keys()]\n",
     "df = df.rename(columns=columns).reset_index(drop=True)\n",
+    "df[\"MUNICIPIO\"] = df[\"MUNICIPIO\"].astype(int)\n",
     "gpd.GeoDataFrame(df, geometry=\"geometry\").to_file(PATH_TEATRI_CLEAN, driver=\"GeoJSON\")"
    ]
   },
@@ -744,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "id": "81efae51",
    "metadata": {},
    "outputs": [],
@@ -763,8 +787,51 @@
     "}\n",
     "df = df[columns.keys()]\n",
     "df = df.rename(columns=columns)\n",
-    "\n",
-    "gpd.GeoDataFrame(df, geometry='geometry', crs=CRS_GRAD).to_file(PATH_CINEMA_CLEAN, driver=\"GeoJSON\")"
+    "gdf = gpd.GeoDataFrame(df, geometry='geometry', crs=CRS_GRAD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed6793e7",
+   "metadata": {},
+   "source": [
+    "Aggiungiamo colonna MUNICIPI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "457ce466",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "municipi = gpd.read_file(PATH_MUNICIPI_CLEAN)\n",
+    "gdf = gpd.sjoin(\n",
+    "    gdf,\n",
+    "    municipi,\n",
+    "    how=\"left\",\n",
+    "    predicate=\"intersects\"\n",
+    "    ).drop([\"index_right\"], axis=1) # eliminiamo l'index_right (conserva l'indice del dataframe del gdf di destra ma non ci serve)\n",
+    "gdf[\"MUNICIPIO\"] = gdf[\"MUNICIPIO\"].astype(int)\n",
+    "gdf.drop([\"AREA\",\"PERIMETRO\"], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d2fdc9f",
+   "metadata": {},
+   "source": [
+    "Salviamo in Clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "1366a91f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf.to_file(PATH_CINEMA_CLEAN, driver=\"GeoJSON\")"
    ]
   },
   {
@@ -777,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "id": "ff1a3538",
    "metadata": {},
    "outputs": [],
@@ -796,8 +863,51 @@
     "}\n",
     "df = df[columns.keys()]\n",
     "df = df.rename(columns=columns)\n",
-    "\n",
-    "gpd.GeoDataFrame(df, geometry='geometry', crs=CRS_GRAD).to_file(PATH_MUSEI_CLEAN, driver=\"GeoJSON\")"
+    "gdf = gpd.GeoDataFrame(df, geometry='geometry', crs=CRS_GRAD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58565d5b",
+   "metadata": {},
+   "source": [
+    "Aggiungiamo Municipi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "252add07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "municipi = gpd.read_file(PATH_MUNICIPI_CLEAN)\n",
+    "gdf = gpd.sjoin(\n",
+    "    gdf,\n",
+    "    municipi,\n",
+    "    how=\"left\",\n",
+    "    predicate=\"intersects\"\n",
+    "    ).drop([\"index_right\"], axis=1) # eliminiamo l'index_right (conserva l'indice del dataframe del gdf di destra ma non ci serve)\n",
+    "gdf[\"MUNICIPIO\"] = gdf[\"MUNICIPIO\"].astype(int)\n",
+    "gdf.drop([\"AREA\",\"PERIMETRO\"], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8cee025",
+   "metadata": {},
+   "source": [
+    "Salviamo in Clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "65d6e5e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf.to_file(PATH_MUSEI_CLEAN, driver=\"GeoJSON\")"
    ]
   },
   {
@@ -843,20 +953,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "id": "ef20f929",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = gpd.read_file(PATH_OSPEDALI_RAW)\n",
+    "gdf = gpd.read_file(PATH_OSPEDALI_RAW).set_crs(CRS_GRAD)\n",
     "gdf = gdf[gdf[\"element\"] != \"relation\"]\n",
     "column = {\n",
     "    \"name\": \"Denominazione\",\n",
     "    \"geometry\": \"geometry\"\n",
     "}\n",
     "gdf = gdf[column.keys()]\n",
-    "gdf = gdf.rename(columns=column)\n",
-    "gdf.set_crs(CRS_GRAD).to_file(PATH_OSPEDALI_CLEAN)"
+    "gdf = gdf.rename(columns=column)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed69410d",
+   "metadata": {},
+   "source": [
+    "Aggiungiamo MUNICIPI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "1a801fb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "municipi = gpd.read_file(PATH_MUNICIPI_CLEAN)\n",
+    "gdf = gpd.sjoin(\n",
+    "    gdf,\n",
+    "    municipi,\n",
+    "    how=\"left\",\n",
+    "    predicate=\"intersects\"\n",
+    "    ).drop([\"index_right\"], axis=1) # eliminiamo l'index_right (conserva l'indice del dataframe del gdf di destra ma non ci serve)\n",
+    "gdf[\"MUNICIPIO\"] = gdf[\"MUNICIPIO\"].astype(int)\n",
+    "gdf.drop([\"AREA\",\"PERIMETRO\"], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa5e20fa",
+   "metadata": {},
+   "source": [
+    "Salviamo in Clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "05bcc177",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf.to_file(PATH_OSPEDALI_CLEAN)"
    ]
   },
   {
@@ -869,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "b472250e",
    "metadata": {},
    "outputs": [],
@@ -879,7 +1032,7 @@
     "\n",
     "# Rimuovo le colonne indesiderate\n",
     "gdf = gdf.drop(columns=[\"CAP\", \"ID_NIL\", \"Location\"])\n",
-    "\n",
+    "gdf[\"MUNICIPIO\"] = gdf[\"MUNICIPIO\"].astype(int)\n",
     "# Rinomino le colonne\n",
     "gdf = gdf.rename(columns={\n",
     "    \"LONG_X_4326\": \"longitudine\",\n",
