ops non avevo salvato

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -387,8 +387,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f909aabc",
+   "metadata": {},
+   "source": [
+    "Incidenti"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "45efc912",
    "metadata": {},
    "outputs": [],
@@ -400,7 +408,71 @@
     "                                max_pois=400,\n",
     "                                peso_inquinamento_vs_incidenti=0,\n",
     "                                peso_fattori_esterni_vs_distribuzione_poi=1,\n",
-    "                                PATH_GEOJSON=PATH_SPORT_TEMPO_LIBERO_FILTRATO_CLEAN)"
+    "                                PATH_GEOJSON=PATH_SPORT_TEMPO_LIBERO_FILTRATO_CLEAN.replace(\"clean.geojson\", \"incidenti_clean.geojson\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9aa023fd",
+   "metadata": {},
+   "source": [
+    "Inquinamento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c09b58be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(PATH_SPORT_TEMPO_LIBERO_PICKLE_STAGING, \"rb\") as file:\n",
+    "    G_sport = pickle.load(file)\n",
+    "\n",
+    "Graph_functions.auto_filter_poi(G_percorsi=G_sport,\n",
+    "                                max_pois=400,\n",
+    "                                peso_inquinamento_vs_incidenti=1,\n",
+    "                                peso_fattori_esterni_vs_distribuzione_poi=1,\n",
+    "                                PATH_GEOJSON=PATH_SPORT_TEMPO_LIBERO_FILTRATO_CLEAN.replace(\"clean.geojson\", \"inquinamento_clean.geojson\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77daee37",
+   "metadata": {},
+   "source": [
+    "Unione dei percorsi in un unico file. Aggiungo dei Tag per distinguere i dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "16eebfeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_completo = gpd.read_file(PATH_SPORT_TEMPO_LIBERO_CLEAN)\n",
+    "gdf_filtrato_incidenti = gpd.read_file(PATH_SPORT_TEMPO_LIBERO_FILTRATO_CLEAN.replace(\"clean.geojson\", \"incidenti_clean.geojson\"))\n",
+    "gdf_filtrato_inquinamento = gpd.read_file(PATH_SPORT_TEMPO_LIBERO_FILTRATO_CLEAN.replace(\"clean.geojson\", \"inquinamento_clean.geojson\"))\n",
+    "\n",
+    "gdf_completo[\"origine\"] = \"completo\"\n",
+    "gdf_filtrato_incidenti[\"origine\"] = \"solo_incidenti\"\n",
+    "gdf_filtrato_inquinamento[\"origine\"] = \"solo_inquinamento\"\n",
+    "gdf_unito = gpd.GeoDataFrame(gpd.pd.concat([\n",
+    "        gdf_completo,\n",
+    "        gdf_filtrato_incidenti,\n",
+    "        gdf_filtrato_inquinamento,\n",
+    "    ], ignore_index=True), crs=CRS_GRAD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2368bee2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_unito.to_file(PATH_SPORT_TEMPO_LIBERO_CLEAN.replace(\"clean.geojson\", \"unito_clean.geojson\"))"
    ]
   },
   {
