analisi aggiornata con inquinamento e incidenti

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "cbde9a58",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "37bed9f2",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "d4ef509f",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
        "9686"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "c774a8e6",
    "metadata": {},
    "outputs": [],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "45efc912",
    "metadata": {},
    "outputs": [],
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "c1ec5deb",
    "metadata": {},
    "outputs": [],
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7fea3c33",
    "metadata": {},
    "outputs": [],
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fa924eea",
    "metadata": {},
    "outputs": [],
@@ -824,19 +824,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c13a5e7c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(PATH_ISTRUZIONE_PICKLE_STAGING, \"rb\") as file:\n",
-    "    G_istruzione = pickle.load(file)\n",
-    "\n",
-    "Graph_functions.auto_filter_poi(G_percorsi=G_istruzione,\n",
-    "                                max_pois=400,\n",
-    "                                peso_inquinamento_vs_incidenti=1,\n",
-    "                                peso_fattori_esterni_vs_distribuzione_poi=1,\n",
-    "                                PATH_GEOJSON=PATH_ISTRUZIONE_FILTRATO_CLEAN.replace(\"clean.geojson\", \"inquinamento_clean.geojson\"))\n",
     "gdf_completo = gpd.read_file(PATH_ISTRUZIONE_CLEAN)\n",
     "gdf_filtrato_incidenti = gpd.read_file(PATH_ISTRUZIONE_FILTRATO_CLEAN.replace(\"clean.geojson\", \"incidenti_clean.geojson\"))\n",
     "gdf_filtrato_inquinamento = gpd.read_file(PATH_ISTRUZIONE_FILTRATO_CLEAN.replace(\"clean.geojson\", \"inquinamento_clean.geojson\"))\n",
@@ -848,17 +840,17 @@
     "        gdf_completo,\n",
     "        gdf_filtrato_incidenti,\n",
     "        gdf_filtrato_inquinamento,\n",
-    "    ], ignore_index=True), crs=CRS_GRAD)\n"
+    "    ], ignore_index=True), crs=CRS_GRAD)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "46c631ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_unito.to_file(PATH_ISTRUZIONE_FILTRATO_CLEAN_CLEAN.replace(\"clean.geojson\", \"unito_clean.geojson\"))"
+    "gdf_unito.to_file(PATH_ISTRUZIONE_FILTRATO_CLEAN.replace(\"clean.geojson\", \"unito_clean.geojson\"))"
    ]
   },
   {
@@ -1135,20 +1127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "bf55f379",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf_list = [\n",
     "    {\"gdf\":  gpd.read_file(PATH_MUSEI_CLEAN),\n",
-    "     \"tipo\": \"Musei\",\n",
+    "     \"tipo\": \"musei\",\n",
     "     \"attr\": {\"priorita\": 1}},\n",
     "     {\"gdf\":  gpd.read_file(PATH_CINEMA_CLEAN),\n",
-    "     \"tipo\": \"Cinema\",\n",
+    "     \"tipo\": \"cinema\",\n",
     "     \"attr\": {\"priorita\": 2}}, \n",
     "     {\"gdf\":  gpd.read_file(PATH_TEATRI_CLEAN),\n",
-    "     \"tipo\": \"Teatri\",\n",
+    "     \"tipo\": \"teatri\",\n",
     "     \"attr\": {\"priorita\": 3}}\n",
     "     ]\n",
     "Graph_functions.auto_analysis_poi(gdf_list,\n",
@@ -1166,12 +1158,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "8b29667c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Da aggiungere"
+    "with open(PATH_CULTURA_SPETTACOLO_PICKLE_STAGING, \"rb\") as file:\n",
+    "    G_cultura_spettacolo = pickle.load(file)\n",
+    "\n",
+    "Graph_functions.auto_filter_poi(G_percorsi=G_cultura_spettacolo,\n",
+    "                                max_pois=100,\n",
+    "                                peso_inquinamento_vs_incidenti=0,\n",
+    "                                peso_fattori_esterni_vs_distribuzione_poi=1,\n",
+    "                                PATH_GEOJSON=PATH_CULTURA_SPETTACOLO_FILTRATO_CLEAN.replace(\"clean.geojson\", \"incidenti_clean.geojson\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a711ad3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(PATH_CULTURA_SPETTACOLO_PICKLE_STAGING, \"rb\") as file:\n",
+    "    G_cultura_spettacolo = pickle.load(file)\n",
+    "\n",
+    "Graph_functions.auto_filter_poi(G_percorsi=G_cultura_spettacolo,\n",
+    "                                max_pois=100,\n",
+    "                                peso_inquinamento_vs_incidenti=1,\n",
+    "                                peso_fattori_esterni_vs_distribuzione_poi=1,\n",
+    "                                PATH_GEOJSON=PATH_CULTURA_SPETTACOLO_FILTRATO_CLEAN.replace(\"clean.geojson\", \"inquinamento_clean.geojson\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "066cb2ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_completo = gpd.read_file(PATH_CULTURA_SPETTACOLO_CLEAN)\n",
+    "gdf_filtrato_incidenti = gpd.read_file(PATH_CULTURA_SPETTACOLO_FILTRATO_CLEAN.replace(\"clean.geojson\", \"incidenti_clean.geojson\"))\n",
+    "gdf_filtrato_inquinamento = gpd.read_file(PATH_CULTURA_SPETTACOLO_FILTRATO_CLEAN.replace(\"clean.geojson\", \"inquinamento_clean.geojson\"))\n",
+    "\n",
+    "gdf_completo[\"origine\"] = \"completo\"\n",
+    "gdf_filtrato_incidenti[\"origine\"] = \"solo_incidenti\"\n",
+    "gdf_filtrato_inquinamento[\"origine\"] = \"solo_inquinamento\"\n",
+    "gdf_unito = gpd.GeoDataFrame(gpd.pd.concat([\n",
+    "        gdf_completo,\n",
+    "        gdf_filtrato_incidenti,\n",
+    "        gdf_filtrato_inquinamento,\n",
+    "    ], ignore_index=True), crs=CRS_GRAD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "67bf17f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_unito.to_file(PATH_CULTURA_SPETTACOLO_FILTRATO_CLEAN.replace(\"clean.geojson\", \"unito_clean.geojson\"))"
    ]
   },
   {
@@ -1440,17 +1487,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "c6b788aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf_list = [\n",
     "    {\"gdf\":  gpd.read_file(PATH_OSPEDALI_CLEAN),\n",
-    "     \"tipo\": \"Ospedali\",\n",
+    "     \"tipo\": \"ospedali\",\n",
     "     \"attr\": {\"priorita\": 1}},\n",
     "     {\"gdf\":  gpd.read_file(PATH_FARMACIE_CLEAN),\n",
-    "     \"tipo\": \"Farmacie\",\n",
+    "     \"tipo\": \"farmacie\",\n",
     "     \"attr\": {\"priorita\": 2}}\n",
     "     ]\n",
     "Graph_functions.auto_analysis_poi(gdf_list,\n",
@@ -1468,11 +1515,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "d96d1a97",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(PATH_SANITA_PICKLE_STAGING, \"rb\") as file:\n",
+    "    G_sanita = pickle.load(file)\n",
+    "\n",
+    "Graph_functions.auto_filter_poi(G_percorsi=G_sanita,\n",
+    "                                max_pois=300,\n",
+    "                                peso_inquinamento_vs_incidenti=0,\n",
+    "                                peso_fattori_esterni_vs_distribuzione_poi=1,\n",
+    "                                PATH_GEOJSON=PATH_SANITA_FILTRATO_CLEAN.replace(\"clean.geojson\", \"incidenti_clean.geojson\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "137305c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(PATH_SANITA_PICKLE_STAGING, \"rb\") as file:\n",
+    "    G_sanita = pickle.load(file)\n",
+    "\n",
+    "Graph_functions.auto_filter_poi(G_percorsi=G_sanita,\n",
+    "                                max_pois=300,\n",
+    "                                peso_inquinamento_vs_incidenti=1,\n",
+    "                                peso_fattori_esterni_vs_distribuzione_poi=1,\n",
+    "                                PATH_GEOJSON=PATH_SANITA_FILTRATO_CLEAN.replace(\"clean.geojson\", \"inquinamento_clean.geojson\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "9fe527ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_completo = gpd.read_file(PATH_SANITA_CLEAN)\n",
+    "gdf_filtrato_incidenti = gpd.read_file(PATH_SANITA_FILTRATO_CLEAN.replace(\"clean.geojson\", \"incidenti_clean.geojson\"))\n",
+    "gdf_filtrato_inquinamento = gpd.read_file(PATH_SANITA_FILTRATO_CLEAN.replace(\"clean.geojson\", \"inquinamento_clean.geojson\"))\n",
+    "\n",
+    "gdf_completo[\"origine\"] = \"completo\"\n",
+    "gdf_filtrato_incidenti[\"origine\"] = \"solo_incidenti\"\n",
+    "gdf_filtrato_inquinamento[\"origine\"] = \"solo_inquinamento\"\n",
+    "gdf_unito = gpd.GeoDataFrame(gpd.pd.concat([\n",
+    "        gdf_completo,\n",
+    "        gdf_filtrato_incidenti,\n",
+    "        gdf_filtrato_inquinamento,\n",
+    "    ], ignore_index=True), crs=CRS_GRAD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "fa24646a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_unito.to_file(PATH_SANITA_FILTRATO_CLEAN.replace(\"clean.geojson\", \"unito_clean.geojson\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1849,7 +1953,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
