analisi unita con anche strade in comune

--- a/Scripts/analisi_unita.ipynb
+++ b/Scripts/analisi_unita.ipynb
@@ -48,6 +48,72 @@
     "\n",
     "gdf_unico.to_file(\"../Data/Clean/Analisi/ciclabili_con_categoria_unite.geojson\", driver=\"GeoJSON\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fa59063",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Carico il file unificato\n",
+    "gdf = gpd.read_file(\"../Data/Clean/Analisi/ciclabili_con_categoria_unite.geojson\")\n",
+    "\n",
+    "# Raggruppiamo per nome della strada (se vuoi anche per 'geometry' possiamo ragionare dopo)\n",
+    "# Manteniamo una sola geometria (es. la prima) e facciamo OR logico sui booleani\n",
+    "agg_dict = {col: \"max\" for col in categorie}  # max su boolean = OR logico\n",
+    "agg_dict.update({\n",
+    "    \"length\": \"sum\",     # sommiamo le lunghezze\n",
+    "    \n",
+    "})\n",
+    "\n",
+    "gdf_grouped = gdf.groupby(\"name\").agg(agg_dict).reset_index()\n",
+    "\n",
+    "# Per la geometria: prendiamo la prima (in alternativa possiamo unire con unary_union se ha più pezzi)\n",
+    "geom = gdf.groupby(\"name\").geometry.unary_union().reset_index()\n",
+    "\n",
+    "# Merge tra geometrie e attributi aggregati\n",
+    "gdf_final = geom.merge(gdf_grouped, on=\"name\")\n",
+    "\n",
+    "# Ricreiamo un GeoDataFrame\n",
+    "gdf_final = gpd.GeoDataFrame(gdf_final, geometry=\"geometry\", crs=gdf.crs)\n",
+    "\n",
+    "# Salvo il risultato\n",
+    "gdf_final.to_file(\"../Data/Clean/Analisi/ciclabili_comuni.geojson\", driver=\"GeoJSON\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b6cd1cd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf = gpd.read_file(\"../Data/Clean/Analisi/ciclabili_con_categoria_unite.geojson\")\n",
+    "\n",
+    "categorie = [\"Sport e Tempo Libero\", \"Istruzione\", \"Sanità\", \"Cultura e Spettacolo\"]\n",
+    "\n",
+    "# Aggrego solo i booleani con OR logico, e tengo gli altri campi dalla \"prima riga\"\n",
+    "agg_dict = {col: \"max\" for col in categorie}\n",
+    "agg_dict.update({\n",
+    "    \"origine\": \"first\",\n",
+    "    \"MUNICIPIO\": \"first\"\n",
+    "})\n",
+    "\n",
+    "# Raggruppo per geometria\n",
+    "gdf_grouped = gdf.groupby(\"geometry\").agg(agg_dict).reset_index()\n",
+    "\n",
+    "# Ricreo GeoDataFrame\n",
+    "gdf_grouped = gpd.GeoDataFrame(gdf_grouped, geometry=\"geometry\", crs=gdf.crs)\n",
+    "\n",
+    "# Salvo\n",
+    "gdf_grouped.to_file(\"../Data/Clean/Analisi/ciclabili_uniche.geojson\", driver=\"GeoJSON\")\n"
+   ]
   }
  ],
  "metadata": {
